k8s/monitoring.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aperture-monitoring
